# RepoSmith

./: .gitignore  ADVISORY_TEMPLATE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  codeql.yml  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: announcement.yml  general.yml  idea.yml  question.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  test-main.yml
examples/hello_world/: README.md  main.py
on/: __main__.py
reposmith/: __main__.py  ci_utils.py  config_utils.py  gitignore_utils.py  license_utils.py  main.py  venv_utils.py  vscode_utils.py
tests/: test_ci_utils.py  test_cli_with_ci.py  test_fs.py
