[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reposmith-tol"
version = "0.1.2"
description = "Portable project bootstrapper (venv, gitignore, license, vscode, etc.)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "TamerOnLine" }]
license = { text = "MIT" }  # ترخيص الحزمة نفسها (لا يؤثر على ما تولّده الأداة)
dependencies = []
keywords = ["bootstrap", "venv", "gitignore", "license", "vscode", "scaffold", "cli"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/liebemama/RepoSmith"
Repository = "https://github.com/liebemama/RepoSmith"
Issues = "https://github.com/liebemama/RepoSmith/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["reposmith*"]

[project.scripts]
reposmith = "reposmith.main:main"
