[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reposmith-tol"
version = "0.1.2"
description = "Portable project bootstrapper (venv, gitignore, license, vscode, etc.)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [{ name = "TamerOnLine" }]
license = "MIT"
dependencies = []
keywords = ["bootstrap", "venv", "gitignore", "license", "vscode", "scaffold", "cli"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/liebemama/RepoSmith"
Repository = "https://github.com/liebemama/RepoSmith"
Issues = "https://github.com/liebemama/RepoSmith/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["reposmith*"]

[project.scripts]
reposmith = "reposmith.main:main"
